--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Abhishek Joshi
+title: <p align="center"> Abhishek Joshi </p>
 description: Architect is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
