--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description:
   <br>
   Hi, Good to see you landing on my page. 
   I am currently working as system design engineer at AMD. This page contains my portfolio related to ML projects.
-  I have done some projects such as facial detection in my college time with openCV.
+  I have done some projects such as facial detection in my college with openCV.
   I have total experience of 2 year in frontend VLSI domain.
   <br>
   </p>
