--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: <p align="center"> Abhishek Joshi </p>
 description: 
   <p align="center">
-  <a href>Resume</a> |
-  <a href="https://www.linkedin.com/in/abhishek-joshi-ba7b0385?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BjD%2FXQa4BQWyoA58sDlf3mA%3D%3D">LinkedIn</a> |
-  <a href="https://github.com/shibhi61h">GitHub</a>
+  <a href style="color: black>Resume</a> |
+  <a href="https://www.linkedin.com/in/abhishek-joshi-ba7b0385?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BjD%2FXQa4BQWyoA58sDlf3mA%3D%3D" style="color: black>LinkedIn</a> |
+  <a href="https://github.com/shibhi61h" style="color: black>GitHub</a>
 
   <br>
   Hi, Good to see you landing on my page. 
